--- a/inst/rmarkdown/templates/sportrxiv_word/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/sportrxiv_word/skeleton/skeleton.Rmd
@@ -19,43 +19,23 @@ author:
 
 affiliation:
   - id            : "1"
-    institution   : "Wilhelm-Wundt-University"
+    institution   : "A University, A City, A State, A Country"
   - id            : "2"
-    institution   : "Konstanz Business School"
-
+    institution   : "Another Place, A City, A State, A Country"
 authornote: |
-  Add complete departmental affiliations for each author here. Each new line herein must be indented, like this line.
-
-  Enter author note here.
-
+  PREPRINT: NOT PEER REVIEWED
 abstract: |
-  One or two sentences providing a **basic introduction** to the field,  comprehensible to a scientist in any discipline.
-  
-  Two to three sentences of **more detailed background**, comprehensible  to scientists in related disciplines.
-  
-  One sentence clearly stating the **general problem** being addressed by  this particular study.
-  
-  One sentence summarizing the main result (with the words "**here we show**" or their equivalent).
-  
-  Two or three sentences explaining what the **main result** reveals in direct comparison to what was thought to be the case previously, or how the  main result adds to previous knowledge.
-  
-  One or two sentences to put the results into a more **general context**.
-  
-  Two or three sentences to provide a **broader perspective**, readily comprehensible to a scientist in any discipline.
+  One or two sentences providing a **basic introduction** to the field,  comprehensible to a scientist in any discipline.Two to three sentences of **more detailed background**, comprehensible  to scientists in related disciplines.One sentence clearly stating the **general problem** being addressed by  this particular study. One sentence summarizing the main result (with the words "**here we show**" or their equivalent). Two or three sentences explaining what the **main result** reveals in direct comparison to what was thought to be the case previously, or how the  main result adds to previous knowledge.One or two sentences to put the results into a more **general context**. Two or three sentences to provide a **broader perspective**, readily comprehensible to a scientist in any discipline.
   
   <!-- https://tinyurl.com/ybremelq -->
   
-keywords          : "keywords"
-wordcount         : "X"
-
-floatsintext      : no
-figurelist        : no
-tablelist         : no
-footnotelist      : no
-linenumbers       : yes
-mask              : no
-draft             : no
-
+keywords          : "Key1, Key2, Key3"
+#wordcount         : "XXXX" # add word count if desire to cover page
+floatsintext      : false
+figurelist        : false
+tablelist         : false
+footnotelist      : false
+mask              : false # mask author information (blinding)
 output: sportrxivdown::sportrxiv_word
 ---
 
